Add loading message until Csound is loaded

--- a/seq/index.html
+++ b/seq/index.html
@@ -4,6 +4,11 @@
 <link rel="stylesheet" type="text/css" href="seq.css" />
 </head>
 <body>
+
+<div id="loader">
+<h1>Please wait a moment while Csound loads</h1>
+</div>
+
 <div ng-class="['NoteGridContainer']" ng-controller="NoteGridController">
 
 <div>
