Add animated gif to loading screen

--- a/seq/index.html
+++ b/seq/index.html
@@ -11,7 +11,9 @@ if (typeof navigator.mimeTypes['application/x-pnacl'] === 'undefined') {
 <body>
 
 <div id="loader">
-<h1>Please wait a moment while Csound loads</h1>
+<h1>Please wait while Csound loads ...</h1>
+<p>Here, watch this animated GIF while you wait.</p>
+<a href="http://en.wikipedia.org/wiki/Wave_packet"><img src="wave_packet.gif" /></a>
 </div>
 
 <div ng-class="['NoteGridContainer']" ng-controller="NoteGridController">
