fix note duration to be based on bpm; css tweaks

--- a/seq/index.html
+++ b/seq/index.html
@@ -1,46 +1,4 @@
-<html ng-app>
-<head>
-<script type="text/javascript">
-if (typeof navigator.mimeTypes['application/x-pnacl'] === 'undefined') {
-    window.location = 'unsupported.html'
-}
-</script>
-<title>Sequencer</title>
-<link rel="stylesheet" type="text/css" href="seq.css" />
-</head>
-<body>
-
-<div id="loader">
-<h1>Please wait while Csound loads ...</h1>
-<p>Here, watch this animated GIF while you wait.</p>
-<a href="http://en.wikipedia.org/wiki/Wave_packet"><img src="wave_packet.gif" /></a>
-</div>
-
-<div ng-class="['NoteGridContainer']" ng-controller="NoteGridController"
-     ng-mousedown="setMouseDown(true)" ng-mouseup="setMouseDown(false)">
-
-<div>
-Scale: <select ng-model="selected.scale" ng-options="key for (key, value) in scales"></select>
-BPM: <input type="number" ng-model="selected.bpm" ng-change="bpmChanged()" >
-Pattern Length: <input type="number" ng-model="selected.colCount" ng-change="colCountChanged()" >
-</div>
-
-<table><tbody>
-<tr ng-repeat="row in noteGrid">
-<td ng-repeat="cell in row"
-    ng-class="['NoteCell', noteCellState(cell)]"
-    ng-mousedown="toggleEnabled(cell)"
-    ng-mouseenter="mouseEnteredCell(cell)"
-    ></td>
-</tr>
-</tbody></table>
-<button ng-click="toggleRunning()">{{ runningButtonText() }}</button>
-<!--pNaCl csound module-->
-<div id="engine"></div>
-</div>
-<script type="text/javascript"
-        src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.16/angular.min.js"></script>
-<script type="text/javascript" src="csound.js"></script>
-<script type="text/javascript" src="seq.js"></script>
-</body>
-</html>
+<html><body><h1>It works!</h1>
+<p>This is the default web page for this server.</p>
+<p>The web server software is running but no content has been added, yet.</p>
+</body></html>
