--- a/seq/index.html
+++ b/seq/index.html
@@ -23,19 +23,19 @@ if (typeof navigator.mimeTypes['application/x-pnacl'] === 'undefined') {
 <tr><td>
 Scale: <select ng-model="selected.scale" ng-options="key for (key, value) in scales"></select>
 </td><td>
+Instrument: <select ng-model="selected.instrument"
+                    ng-options="key for (key, value) in instruments"></select>
+</td></tr>
+<tr><td>
 BPM: <input ng-class="['NumericInput']" type="number"
             ng-model="selected.bpm" ng-change="bpmChanged()" >
 </td><td>
 Pattern Length: <input ng-class="['NumericInput']" type="number"
                        ng-model="selected.colCount" ng-change="colCountChanged()" >
 </td></tr>
-<tr><td>
-Instrument: <select ng-model="selected.instrument"
-                    ng-options="key for (key, value) in instruments"></select>
-</td><td>
-</td><td>
-</td></tr>
 </tbody></table>
+<button ng-click="randomize()">Random</button>
+
 
 <table><tbody>
 <tr ng-repeat="row in noteGrid">
@@ -47,9 +47,16 @@ Instrument: <select ng-model="selected.instrument"
 </tr>
 </tbody></table>
 <button ng-click="toggleRunning()">{{ runningButtonText() }}</button>
+<div class="Instructions">
+This is a sequencer. A timer proceeds through the grid, playing a note for each enabled square
+in a column when its time arrives. Click on squares to enable them, or drag your mouse around
+inside the grid. Alternatively, the "Random" button will set a random pattern. Click the "Start"
+button to start the sequencer. All controls can be changed while the sequencer is playing or 
+stopped.
+</div>
+</div>
 <!--pNaCl csound module-->
 <div id="engine"></div>
-</div>
 <script type="text/javascript"
         src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.16/angular.min.js"></script>
 <script type="text/javascript" src="csound.js"></script>
