Add copyright notice

--- a/seq/index.html
+++ b/seq/index.html
@@ -54,6 +54,7 @@ in a column when its time arrives. Click on squares to enable them, or drag your
 inside the grid. Alternatively, the "Random" button will set a random pattern. Click the "Start"
 button to start the sequencer. All controls can be changed while the sequencer is playing or 
 stopped.
+<p>Copyright &copy; 2014 by Forrest Cahoon (forrest.cahoon@gmail.com). All rights reserved.</p>
 </div>
 </div>
 <!--pNaCl csound module-->
